Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-14581

Server does not clear diagnostics between sessions

    XMLWordPrintable

Details

    • 10.2.14

    Description

      In the "mysql" client, I run this query to force a warning:

      SELECT TIME('10:10:10.11111111111');
      

      Now I exit the session, start "mysql" again, and run this query:

      SHOW WARNINGS;
      

      It returns the warnings from the previous session:

      +-------+------+--------------------------------------------------------+
      | Level | Code | Message                                                |
      +-------+------+--------------------------------------------------------+
      | Note  | 1292 | Truncated incorrect time value: '10:10:10.11111111111' |
      +-------+------+--------------------------------------------------------+
      

      Attachments

        Activity

          People

            wlad Vladislav Vaintroub
            bar Alexander Barkov
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1d 1h
                1d 1h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.