MDEV-14581 Server does not clear diagnostics between sessions

Amend previous patch, so it works in all cases (also for "change user"
command, and for RESET CONNECTION in 10.3)